Fix crash when unplugging/plugging ethernet cable

We do not remove the ethernet service (network) when
cable is disconnected. Instead it's "hold in place"
via placeholder but that is not checked and plugging
cable back will cause crash.

Fixes: QTBUG-103327
Change-Id: If14a4f28217ba5883dbc23ba42a1e91b004b7d58
Reviewed-by: Samuli Piippo <samuli.piippo@qt.io>
(cherry picked from commit 26b002e1388d197772b56d471a6dd6ecc4ab2509)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>